--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ authors = ["MinDong <mdskylover@gmail.com>"]
 [tool.poetry.dependencies]
 python = "^3.9"
 python-dotenv = "^0.20.0"
+requests = "^2.27.1"
 
 [tool.poetry.dev-dependencies]
 
